# tidb

./: .bazelrc  .env  .golangci.yml  AGENTS.md  BUILD.bazel  DEPS.bzl  Makefile  WORKSPACE  go.mod  go.sum  kubeconfig.yml  output  ssa.html
.agents/skills/: README.md
.github/scripts/: apply-bazel-files.sh  package-bazel-files.sh
.github/workflows/: generate-bazel-files.yml  update-bazel-files.yml
.tmp/: outer_join_false_issue.md  outer_join_false_pr.md
cmd/ddltest/: main_test.go
ddl/: backfilling.go  column.go  constant.go  ddl.go  ddl_tiflash_api.go  ddl_worker.go  delete_range.go  dist_backfilling.go  dist_owner.go  index.go  job_table.go  job_table_test.go  placement_policy_test.go
domain/: domain.go
domain/infosync/: info.go
dumpling/export/: consistency.go  dump.go  ir.go  sql.go  writer.go
executor/: analyze.go  builder.go  distsql.go  executor.go  executor_test.go  plan_replayer.go
expression/: builtin_time.go  constant_fold_test.go  helper.go  helper_test.go  integration_serial_test.go
infoschema/perfschema/: main_test.go
kv/: utils.go
meta/: meta.go
metrics/: metrics.go
parser/: parser.y
parser/format/: format.go
parser/model/: ddl.go
pkg/distsql/: request_builder.go
pkg/executor/: BUILD.bazel  adapter.go  analyze.go  analyze_col.go  analyze_col_sampling.go  analyze_col_v2.go  analyze_idx.go  analyze_utils_test.go  builder.go  explainfor_test.go  partition_table_test.go  pipelined_window.go  plan_replayer.go  prepared_test.go  select.go  set_test.go
server/: main_test.go  tidb_test.go
session/: bootstrap.go  bootstrap_test.go  main_test.go  nontransactional.go  schema_test.go  session.go  session_test.go
sessiontxn/: BUILD.bazel  txn_context_test.go
statistics/: BUILD.bazel  cmsketch.go  cmsketch_test.go  main_test.go
store/: main_test.go
structure/: main_test.go
table/: main_test.go
tablecodec/: main_test.go
testkit/: dbtestkit.go  testkit.go
tests/: try.go
tests/realtikvtest/addindexlittest/: BUILD.bazel  addIndex_test.go  common.go  workload.go  workload_test.go
util/: prefix_helper.go  util.go
util/gpool/: BUILD.bazel  gpool.go  options.go  pool.go  pool_func.go  spinlock.go  worker.go  worker_array.go  worker_func.go  worker_loop_queue.go  worker_stack.go
(+334 files in other folders)
