load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_library(
    name = "addindexlittest_test",
    srcs = [        
        "common.go"
        "workload.go",
    ],
    importpath = "github.com/pingcap/tidb/tests/realtikvtest",
    visibility = ["//visibility:public"],
    deps = [
	    "//fmt",
	    "//strconv",
	    "//strings",
	    "//math",
        "//math/rand",
	    "//time",
        "//testing",
        "//testkit",
    ],
)

go_test(
    name = "addindexlittest_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "adindex_test.go",
        "workload_test.go",
    ],
    flaky = True,
    deps = [
        "//testing",
        "//testkit",
        "//tests/realtikvtest",
        "@com_github_stretchr_testify//require",
    ],
)
