load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_library(
    name = "addindexlittest_test",
    srcs = [
        "common.go",
        "workload.go",
    ],
    importpath = "github.com/pingcap/tidb/tests/realtikvtest",
    visibility = ["//visibility:public"],
    deps = [
        "//fmt",
        "//math",
        "//math/rand",
        "//strconv",
        "//strings",
        "//testing",
        "//testkit",
        "//time",
    ],
)

go_test(
    name = "addindexlittest_test",
    timeout = "short",
    srcs = [
        "adindex_test.go",
        "main_test.go",
        "workload_test.go",
    ],
    data = ["//tidb-server:tidb-server-raw"],
    flaky = True,
    deps = [
        "//testing",
        "//testkit",
        "//tests/realtikvtest",
        "@com_github_stretchr_testify//require",
    ],
)
